first terminal commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
           android:name=".MainActivity"
           android:theme="@style/AppTheme"/>
 
+        <activity
+            android:name=".RegisterActivity"
+            android:theme="@style/AppTheme"/>
+
     </application>
 
 </manifest>
