--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".SplashActivity"
+            android:name=".ui.SplashActivity"
             android:theme="@style/SplashTheme">
 
             <intent-filter>
@@ -25,11 +25,11 @@
         </activity>
 
         <activity
-          android:name=".MainActivity"
+          android:name=".ui.MainActivity"
           android:theme="@style/AppTheme"/>
 
         <activity
-            android:name=".RegisterActivity"
+            android:name=".ui.RegisterActivity"
             android:theme="@style/AppTheme"/>
 
     </application>
