Register and Login operation and live data

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".add.AddQuestionActivity"></activity>
+        <activity android:name=".add.AddAnswerActivity"></activity>
+        <activity android:name=".add.QuizOtherActivity" />
+        <activity android:name=".add.AddQuestionActivity" />
         <activity android:name=".ui.quiz.QuizActivity" />
         <activity
             android:name=".ui.SplashActivity"
