--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
+kapt {
+    correctErrorTypes = true
+}
+
 android {
     compileSdkVersion 28
+    compileOptions.encoding = 'windows-1251'
 
 
     defaultConfig {
@@ -24,32 +29,66 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 
 }
 
+def retrofit_version = "2.5.0"
+def stetho_version = "1.5.1"
+def glide_version = "4.8.0"
+def okhttp_version = "3.12.1"
+def room_version = "1.1.1"
+def support_version = "28.0.0"
+
 dependencies {
-    def lifecycle_version = "2.2.0"
-    def room_version = "2.2.5"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    implementation "com.android.support:design:$support_version"
+    implementation "com.android.support:recyclerview-v7:$support_version"
+
+    //Material Design
+    implementation "com.google.android.material:material:1.1.0"
+
+    // AAC
+    implementation "android.arch.lifecycle:extensions:$room_version"
+    implementation "android.arch.lifecycle:runtime:$room_version"
+
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    implementation "com.android.support.constraint:constraint-layout:1.1.3"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    kapt "android.arch.persistence.room:compiler:$room_version"
 
 
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    // Retrofit & GSON
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    // Stetho
+    implementation "com.facebook.stetho:stetho:$stetho_version"
 
-    implementation 'com.facebook.stetho:stetho:1.5.1'
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // Okhttp
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+
+
+    testImplementation "junit:junit:4.12"
+    androidTestImplementation "androidx.test.ext:junit:1.1.1"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
 
 }
