--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kubra.koubitirme">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".Application"
         android:allowBackup="true"
@@ -10,9 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".add.AddAnswerActivity"></activity>
-        <activity android:name=".add.QuizOtherActivity" />
-        <activity android:name=".add.AddQuestionActivity" />
+        <activity android:name=".design.main.ImageList"/>
         <activity android:name=".ui.quiz.QuizActivity" />
         <activity
             android:name=".ui.SplashActivity"
@@ -27,7 +27,7 @@
             android:name=".ui.MainActivity"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".ui.RegisterActivity"
+            android:name=".ui.register.RegisterActivity"
             android:theme="@style/AppTheme" />
     </application>
 
