--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,10 @@ kapt {
 }
 
 android {
+    publishNonDefault  true
     compileSdkVersion 28
     compileOptions.encoding = 'windows-1251'
+
 
 
     defaultConfig {
@@ -35,17 +37,21 @@ android {
 
 }
 
-def retrofit_version = "2.5.0"
+def retrofit_version = '2.9.0'
 def stetho_version = "1.5.1"
-def glide_version = "4.8.0"
-def okhttp_version = "3.12.1"
+def glide_version = '4.11.0'
+def okhttp_version = '4.7.2'
 def room_version = "1.1.1"
 def support_version = "28.0.0"
 
 dependencies {
 
+
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
 
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -83,12 +89,15 @@ dependencies {
 
     // Okhttp
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
 
-    testImplementation "junit:junit:4.12"
+   // releaseImplementation project(path: ':KOUBitirme', configuration: 'release')
+   // debugImplementation project(path: ':KOUBitirme', configuration: 'debug')
+
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation "androidx.test.ext:junit:1.1.1"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0"
 
