--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,20 @@
     package="com.kubra.koubitirme">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 
     <application
         android:name=".Application"
+        android:largeHeap="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AnimalList" />
+        <activity android:name=".AnimalList"/>
+        <activity android:name=".AnimalDetail"/>
         <activity android:name=".AnimalFood" />
         <activity android:name=".ui.quiz.QuizActivity" />
         <activity
